--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
     "@types/styled-components": "^5.1.34",
     "antd": "^5.17.3",
     "axios": "^1.7.1",
+    "dotenv": "^16.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.23.1",
     "redux": "^5.0.1",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
+    "@types/node": "^20.12.12",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
