--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react-markdown": "^9.0.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.23.1",
+    "react-use": "^17.5.0",
     "redux": "^5.0.1",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "use-debounce": "^10.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
