--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
+    "@reduxjs/toolkit": "^2.2.5",
     "@types/react-router-dom": "^5.3.3",
     "@types/redux": "^3.6.0",
     "@types/styled-components": "^5.1.34",
@@ -21,9 +22,11 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
     "react-query": "^3.39.3",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-use": "^17.5.0",
     "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "styled-components": "^6.1.11",
     "use-debounce": "^10.0.1"
   },
